--- a/sysutils/xfce4-quicklauncher-plugin/Makefile
+++ b/sysutils/xfce4-quicklauncher-plugin/Makefile
@@ -1,10 +1,11 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2005/10/26 04:44:56 minskim Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 XFCE4_VERSION=	0.81
 
 DISTNAME=	xfce4-quicklauncher-plugin-${XFCE4_VERSION}
+PKGREVISION=	1
 CATEGORIES=	sysutils
 MASTER_SITES=	http://download.berlios.de/xfce-goodies/
 COMMENT=	XFce4 quicklaunch plugin
