--- a/x11/ruby-tk/Makefile
+++ b/x11/ruby-tk/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2005/06/01 18:03:31 jlam Exp $
+# $NetBSD: Makefile,v 1.19 2005/11/02 08:59:42 taca Exp $
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-tk-${RUBY_VERSION}
@@ -12,7 +12,6 @@ COMMENT=	Ruby interface to the Tk widget set
 DEPENDS+=	${RUBY_PKGPREFIX}-tcltklib>=${RUBY_VERSION}:../../x11/ruby-tcltklib
 
 RUBY_HAS_ARCHLIB=	yes
-RUBY_VERSION_SUPPORTED=	18
 USE_RUBY_EXTCONF=	yes
 EXTRACT_ELEMENTS=	${RUBY_DISTNAME}/ext/tk
 WRKSRC=			${RUBY_WRKSRC}/ext/tk
