--- a/net/md-whois/Makefile
+++ b/net/md-whois/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2005/07/16 01:19:16 jlam Exp $
+# $NetBSD: Makefile,v 1.16 2005/08/02 00:23:31 reed Exp $
 #
 # todo: set location of [md-]whois.conf and fix in man page too
 # todo: build and install the po/ files and add to PLIST
@@ -8,7 +8,7 @@
 DISTNAME=	whois_${VERSION}
 PKGNAME=	md-whois-${VERSION}
 CATEGORIES=	net
-MASTER_SITES=	http://ftp.debian.org/debian/pool/main/w/whois/
+MASTER_SITES=	${MASTER_SITE_DEBIAN:=pool/main/w/whois/}
 
 MAINTAINER=	reed@reedmedia.net
 HOMEPAGE=	http://www.linux.it/~md/software/
