--- a/security/gnustep-ssl/Makefile
+++ b/security/gnustep-ssl/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.6 2005/04/11 21:47:11 tv Exp $
+# $NetBSD: Makefile,v 1.7 2005/05/22 20:08:30 jlam Exp $
 #
 
 DISTNAME=		gnustep-base-1.10.1
 PKGNAME=		${DISTNAME:S/base/ssl/}
 CATEGORIES=		security gnustep
-MASTER_SITES=		ftp://ftp.gnustep.org/pub/gnustep/core/
+MASTER_SITES=		${MASTER_SITE_GNUSTEP:=core/}
 
 MAINTAINER=		rh@NetBSD.org
 HOMEPAGE=		http://www.gnustep.org/
