--- a/net/proftpd/Makefile
+++ b/net/proftpd/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.23 2005/06/23 04:49:26 christos Exp $
+# $NetBSD: Makefile,v 1.24 2005/08/06 11:51:18 adrianp Exp $
 
 DISTNAME=	proftpd-1.2.10
 PKGREVISION=	4
@@ -6,7 +6,7 @@ CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.proftpd.org/distrib/source/ \
 		ftp://ftp.servus.at/ProFTPD/distrib/source/ \
 		ftp://ftp.fsn.hu/pub/proftpd/distrib/source/ \
-		ftp://ftp.middle-earth.it/proftpd/ \
+		ftp://ftp.middle-earth.it/proftpd/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	martti@NetBSD.org
