--- a/net/netgroup/Makefile
+++ b/net/netgroup/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2004/12/21 21:06:40 christos Exp $
+# $NetBSD: Makefile,v 1.2 2005/10/10 17:08:18 hira Exp $
 #
 
 DISTNAME=	netgroup-0.0
@@ -8,7 +8,7 @@ MASTER_SITES=	ftp://ftp.astron.com/pub/netgroup/
 MAINTAINER=	christos@NetBSD.org
 COMMENT=	Netgroup membership listing and testing functions
 
-.include "../../mk/bsd.prefs.mk"
+NOT_FOR_PLATFORM=	Interix-*-* # no netgroups
 
 INSTALL_TARGET=	inst-all
 
