--- a/mail/clamav/Makefile
+++ b/mail/clamav/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.45 2005/09/27 14:23:41 xtraeme Exp $
+# $NetBSD: Makefile,v 1.46 2005/10/23 22:32:20 rillig Exp $
 
 DISTNAME=	clamav-${CLAMAV_VERSION}
 PKGNAME=	clamav-${CLAMAV_VERSION:S/-/./}
@@ -11,7 +11,7 @@ COMMENT=	Anti-virus toolkit
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
-CLAMAV_VERSION=		0.87
+CLAMAV_VERSION=		0.87.1
 
 USE_LIBTOOL=		yes
 
