--- a/net/openafs/Makefile
+++ b/net/openafs/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2005/08/11 08:48:04 adam Exp $
+# $NetBSD: Makefile,v 1.14 2005/11/02 14:42:38 gendalia Exp $
 
 DISTNAME=	openafs-1.4.0-src
+PKGREVISION=	1
 PKGNAME=	${DISTNAME:C/-src//}
 CATEGORIES=	net sysutils
 MASTER_SITES=	http://www.openafs.org/dl/openafs/1.4.0/
