--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.396 2005/10/27 07:56:02 wiz Exp $
+# $NetBSD: Makefile,v 1.397 2005/10/29 14:30:56 xtraeme Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -6,6 +6,7 @@ COMMENT=	Graphics tools and libraries
 SUBDIR+=	3DKit
 SUBDIR+=	CRWInfo
 SUBDIR+=	Cenon
+SUBDIR+=	Coin
 SUBDIR+=	GLXKit
 SUBDIR+=	GMT
 SUBDIR+=	GUIlib
