--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.397 2005/10/29 14:30:56 xtraeme Exp $
+# $NetBSD: Makefile,v 1.398 2005/11/04 11:48:01 rillig Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -65,6 +65,7 @@ SUBDIR+=	epeg
 SUBDIR+=	exif
 SUBDIR+=	exifprobe
 SUBDIR+=	exiftags
+SUBDIR+=	exiftool
 SUBDIR+=	exiv2
 SUBDIR+=	fbm
 SUBDIR+=	feh
