--- a/math/aribas/Makefile
+++ b/math/aribas/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2005/01/21 09:50:20 adam Exp $
+# $NetBSD: Makefile,v 1.13 2005/06/17 03:50:19 jlam Exp $
 
 DISTNAME=	aribas-1.53
 CATEGORIES=	math
@@ -10,7 +10,7 @@ COMMENT=	Multi-precision floating point and big integer arithmetic calculator
 
 CPPFLAGS+=	-DUNiX -DPROTO
 
-BUILD_DIRS=	${WRKDIR}/${DISTNAME}/src
+BUILD_DIRS=	src
 
 INSTALLATION_DIRS=	bin man/man1
 
