--- a/net/airport2basestationconfig/Makefile
+++ b/net/airport2basestationconfig/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2005/04/11 21:46:44 tv Exp $
+# $NetBSD: Makefile,v 1.7 2005/06/17 03:50:23 jlam Exp $
 
 DISTNAME=	configurator_201
 PKGNAME=	${BINNAME}-2.0.1
@@ -23,7 +23,7 @@ LIBDIR=		${PREFIX}/lib/${BINNAME}
 .include "../../mk/bsd.prefs.mk"
 
 USE_JAVA=		run
-PKG_JVMS_ACCEPTED=	sun-jdk13 sun-jdk14 blackdown-jdk13 jdk13 jdk14
+PKG_JVMS_ACCEPTED=	sun-jdk13 sun-jdk14 blackdown-jdk13 jdk14
 
 INSTALLATION_DIRS=	bin
 
