--- a/net/airportbasestationconfig/Makefile
+++ b/net/airportbasestationconfig/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.26 2005/04/11 21:46:44 tv Exp $
+# $NetBSD: Makefile,v 1.27 2005/06/17 03:50:23 jlam Exp $
 
 DISTNAME=	configurator_152-128
 PKGNAME=	${BINNAME}-1.5.2
@@ -21,7 +21,7 @@ JARNAME=	AirportConfig128Bit.jar
 LIBDIR=		${PREFIX}/lib/${BINNAME}
 
 USE_JAVA=		run
-PKG_JVMS_ACCEPTED=	sun-jdk13 sun-jdk14 blackdown-jdk13 jdk13 jdk14
+PKG_JVMS_ACCEPTED=	sun-jdk13 sun-jdk14 blackdown-jdk13 jdk14
 
 INSTALLATION_DIRS=	bin
 
