--- a/emulators/qemu/Makefile
+++ b/emulators/qemu/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.18 2005/10/01 04:12:32 hubertf Exp $
+# $NetBSD: Makefile,v 1.19 2005/11/04 21:05:51 dbj Exp $
 #
 
 DISTNAME=		qemu-0.7.2
-PKGREVISION=		1
+PKGREVISION=		2
 CATEGORIES=		emulators
 MASTER_SITES=		http://fabrice.bellard.free.fr/qemu/
 
