--- a/x11/xlockmore/Makefile.common
+++ b/x11/xlockmore/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.32 2005/09/11 16:55:38 hubertf Exp $
+# $NetBSD: Makefile.common,v 1.33 2005/09/18 19:16:49 minskim Exp $
 #
 # This Makefile.common is included by:
 #
@@ -8,8 +8,7 @@
 # If these packages are updated, please remember to reset any PKGREVISIONs
 # in those Makefiles.
 
-DISTNAME=       xlockmore-5.19
-PKGREVISION=	2
+DISTNAME=       xlockmore-5.20.1
 CATEGORIES=	x11
 MASTER_SITES=	ftp://ftp.tux.org/pub/tux/bagleyd/xlockmore/ \
 		ftp://ibiblio.org/pub/Linux/X11/screensavers/ \
