--- a/graphics/gimp24/Makefile
+++ b/graphics/gimp24/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2005/10/24 16:22:26 rillig Exp $
+# $NetBSD: Makefile,v 1.3 2005/10/25 11:31:55 adam Exp $
 
 DISTNAME=	gimp-2.3.4
 CATEGORIES=	graphics
@@ -18,6 +18,7 @@ BUILD_USES_MSGFMT=	yes
 CONFLICTS+=		gimp<=1.2.3
 
 USE_LIBTOOL=		yes
+USE_MSGFMT_PLURALS=	yes
 USE_PKGINSTALL=		yes
 USE_PKGLOCALEDIR=	yes
 USE_TOOLS+=		gmake pkg-config
