--- a/sysutils/cvsreport/Makefile
+++ b/sysutils/cvsreport/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2005/11/05 03:21:22 rillig Exp $
 #
 
 DISTNAME=		cvsreport-0.3.5
@@ -6,7 +6,7 @@ CATEGORIES=		sysutils
 MASTER_SITES=		http://download.gna.org/cvsreport/cvsreport.pkg/0.3.5/
 
 MAINTAINER=		pancake@phreaker.net
-HOMEPAGE=		http://home.gna.org/report/
+HOMEPAGE=		http://home.gna.org/cvsreport/
 COMMENT=		Message reports from CVS activity
 
 REPLACE_PERL+=		cvsreport
