--- a/net/p5-Net-Packet/Makefile
+++ b/net/p5-Net-Packet/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2005/08/13 08:11:17 adrianp Exp $
 
 DISTNAME=	Net-Packet-2.04
 PKGNAME=	p5-${DISTNAME}
@@ -19,6 +19,11 @@ PKG_INSTALLATION_TYPES=		overwrite pkgviews
 BUILDLINK_DEPENDS.libpcap+=	libpcap>=0.9.3nb2
 
 PERL5_PACKLIST=		auto/Net/Packet/.packlist
+
+.include "../../mk/endian.mk"
+.if ${MACHINE_ENDIAN} == "big"
+PKG_SKIP_REASON+=	"Big endian architectures not supported yet"
+.endif
 
 .include "../../net/libpcap/buildlink3.mk"
 .include "../../lang/perl5/module.mk"
