--- a/wm/Makefile
+++ b/wm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.76 2005/09/04 06:58:59 xtraeme Exp $
+# $NetBSD: Makefile,v 1.77 2005/10/23 20:40:36 minskim Exp $
 #
 
 COMMENT=	X11 window managers, configuration tools, and themes
@@ -60,6 +60,7 @@ SUBDIR+=	selectwm
 SUBDIR+=	skippy
 SUBDIR+=	tvtwm
 SUBDIR+=	uwm
+SUBDIR+=	vtwm
 SUBDIR+=	w9wm
 SUBDIR+=	waimea
 SUBDIR+=	wampager
