--- a/emulators/suse91_base/Makefile
+++ b/emulators/suse91_base/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2005/08/05 22:40:24 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2005/08/16 00:30:41 dmcmahill Exp $
 
 DISTNAME=		suse_base-${SUSE_VERSION}
-PKGREVISION=		7
+PKGREVISION=		8
 CATEGORIES=		emulators
 MASTER_SITES=		${MASTER_SITE_SUSE91}
 DISTFILES=		${RPMFILES}
