--- a/www/lighttpd/Makefile
+++ b/www/lighttpd/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2005/09/28 12:27:52 rillig Exp $
+# $NetBSD: Makefile,v 1.3 2005/10/11 15:44:00 joerg Exp $
 
-DISTNAME=	lighttpd-1.4.6
+DISTNAME=	lighttpd-1.4.7
 CATEGORIES=	www
 MASTER_SITES=	http://www.lighttpd.net/download/
 
