--- a/pkgtools/pkg_install/Makefile
+++ b/pkgtools/pkg_install/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.116 2005/10/07 18:05:07 reed Exp $
+# $NetBSD: Makefile,v 1.117 2005/11/06 22:15:44 jlam Exp $
 
 # Notes to package maintainers:
 #
@@ -96,7 +96,7 @@ post-install-script:
 update:
 	${MAKE}
 	${MAKE} deinstall UPDATE_RUNNING=YES
-	${MAKE} update
+	${MAKE} ${UPDATE_TARGET}
 	${MAKE} clean
 
 .include "../../pkgtools/libnbcompat/inplace.mk"
