--- a/devel/bison/Makefile
+++ b/devel/bison/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.54 2005/07/15 20:14:03 jlam Exp $
+# $NetBSD: Makefile,v 1.55 2005/09/30 13:51:25 wiz Exp $
 
 DISTNAME=		bison-2.1
 CATEGORIES=		devel
@@ -13,6 +13,7 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 BUILD_USES_MSGFMT=	yes
 GNU_CONFIGURE=		YES
+USE_LANGUAGES=		c c++
 USE_TOOLS+=		gm4:run
 
 INFO_FILES=		bison.info
