--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.688 2005/11/03 06:35:30 taca Exp $
+# $NetBSD: Makefile,v 1.689 2005/11/03 06:42:50 wiz Exp $
 #
 
 COMMENT=	Development utilities
@@ -347,6 +347,8 @@ SUBDIR+=	p5-Config-General
 SUBDIR+=	p5-Config-IniFiles
 SUBDIR+=	p5-Config-Tiny
 SUBDIR+=	p5-Curses
+SUBDIR+=	p5-Curses-UI
+SUBDIR+=	p5-Curses-UI-POE
 SUBDIR+=	p5-Data-Buffer
 SUBDIR+=	p5-Data-Hierarchy
 SUBDIR+=	p5-Data-ShowTable
@@ -458,6 +460,7 @@ SUBDIR+=	p5-Sub-Uplevel
 SUBDIR+=	p5-Term-ProgressBar
 SUBDIR+=	p5-Term-ReadKey
 SUBDIR+=	p5-Term-ReadLine
+SUBDIR+=	p5-Term-Size
 SUBDIR+=	p5-Term-Screen
 SUBDIR+=	p5-Test-Builder-Tester
 SUBDIR+=	p5-Test-ClassAPI
