--- a/databases/Makefile
+++ b/databases/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.186 2005/10/31 09:24:35 xtraeme Exp $
+# $NetBSD: Makefile,v 1.187 2005/11/04 07:05:15 taca Exp $
 #
 
 COMMENT=	Databases
@@ -61,6 +61,7 @@ SUBDIR+=	p5-Apache-DBI
 SUBDIR+=	p5-BerkeleyDB
 SUBDIR+=	p5-Class-DBI
 SUBDIR+=	p5-Class-DBI-AbstractSearch
+SUBDIR+=	p5-Data-Table
 SUBDIR+=	p5-DBD-CSV
 SUBDIR+=	p5-DBD-Google
 SUBDIR+=	p5-DBD-Oracle
