--- a/print/pslib/Makefile
+++ b/print/pslib/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.1.1.1 2005/08/19 16:05:03 drochner Exp $
+# $NetBSD: Makefile,v 1.2 2005/08/24 19:05:14 kristerw Exp $
 #
 
 DISTNAME=		pslib-0.2.6
+PKGREVISION=		1
 CATEGORIES=		print
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=pslib/}
 
@@ -11,10 +12,12 @@ COMMENT=		C-library to create PostScript files
 
 BUILD_DEPENDS+=		p5-XML-Parser-[0-9]*:../../textproc/p5-XML-Parser
 
+BUILD_USES_MSGFMT=	yes
 USE_PKGLOCALEDIR=	yes
 USE_LIBTOOL=		yes
 PKGCONFIG_OVERRIDE+=	${WRKSRC}/libps.pc.in
 GNU_CONFIGURE=		yes
 USE_TOOLS+=		perl
 
+.include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
