--- a/devel/check/Makefile
+++ b/devel/check/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2005/05/22 20:07:49 jlam Exp $
+# $NetBSD: Makefile,v 1.9 2005/09/28 20:52:19 rillig Exp $
 #
 
-DISTNAME=	check-0.9.1
+DISTNAME=	check-0.9.3
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=check/}
 
