--- a/devel/libaura/Makefile
+++ b/devel/libaura/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2005/04/11 21:45:26 tv Exp $
+# $NetBSD: Makefile,v 1.5 2005/09/28 14:31:06 rillig Exp $
 #
 
 DISTNAME=	libaura-2.0
@@ -25,4 +25,5 @@ do-install:
 	${INSTALL_LIB} ${WRKSRC}/libaura.so* ${PREFIX}/lib
 	${INSTALL_LIB} ${WRKSRC}/*.a ${PREFIX}/lib
 
+.include "../../devel/sysexits/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
