--- a/editors/zile/Makefile
+++ b/editors/zile/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2005/04/11 21:45:42 tv Exp $
+# $NetBSD: Makefile,v 1.17 2005/08/11 15:33:08 adam Exp $
 
 DISTNAME=	zile-2.2.4
 CATEGORIES=	editors
@@ -14,5 +14,6 @@ GNU_CONFIGURE=	yes
 
 INFO_FILES=	zile.info
 
+.include "../../devel/libgetopt/buildlink3.mk"
 .include "../../devel/ncurses/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
