--- a/mail/smtpfeed/Makefile
+++ b/mail/smtpfeed/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2005/03/14 19:52:16 tv Exp $
+# $NetBSD: Makefile,v 1.23 2005/03/24 21:12:56 wiz Exp $
 
 DISTNAME=	smtpfeed-1.18
 PKGREVISION=	1
@@ -41,4 +41,5 @@ post-install:
 		${INSTALL_DATA} ${WRKSRC}/$$i ${DOCDIR}; \
 	done
 
+.include "../../devel/sysexits/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
